src/style/browser.scss
@import 'variables';
@import 'functions';

@media screen {
  .resume {
    max-width: $max-page-width;

    margin: 0 auto;
  }

  .print-only {
    display: none !important;
  }
}

@media screen and (min-width: $max-page-width) {
  .resume {
    margin: 1rem auto;

    @include shadow-depth(3);
  }
}

@media screen and (min-width: 62rem) {
  .description {
    padding-right: 15rem;
  }
}

@media screen and (max-width: 46rem) {
  html {
    background-color: color($colors, primary-muted);
  }

  .resume {
    flex-direction: column;
  }

  .sidebar {
    padding-top: 6rem;
    border-bottom: solid color($colors, primary) 0.5rem;
    border-right: none;
    text-align: center;

    .name {
      position: fixed;
      top: 0;
      left: 0;
      right: 0;

      margin: 0;
      padding: 1rem 0;
      z-index: 2;

      background-color: color($colors, primary-muted);
    }

    .contact {
      flex-flow: row wrap;
      justify-content: center;

      > * {
        padding: 0.3125rem 0.9375rem;
        flex-direction: row-reverse;
        text-align: left;
        text-align: start;

        .material-icons {
          margin-left: 0;
          margin-right: 0.5rem;
        }
      }
    }

    .footer {
      flex-direction: row;
      align-items: center;
      justify-content: center;
    }
  }

  .content .title-line {
    flex-direction: column;
  }
}

@media screen and (max-width: 22rem) {
  .sidebar {
    .contact {
      justify-content: flex-start;

      > * {
        flex-grow: 1;
      }
    }
  }
}

